<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackGround"
    tools:context=".MainActivity"
    android:onClick="clickActivity">

    <LinearLayout
        android:id="@+id/main_layout_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:orientation="vertical"
        android:background="@drawable/layout_background"
        android:elevation="50dp"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actionbar_setting"
            android:textColor="@color/white"
            android:layout_margin="@dimen/main_layout_margin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_app_name"
            android:textColor="@color/white"
            android:layout_margin="@dimen/main_layout_margin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/about_app_author"
            android:layout_margin="@dimen/main_layout_margin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/about_app_version"
            android:layout_margin="@dimen/main_layout_margin"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="5dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/main_title_textbox"
            android:textSize="@dimen/main_text_size"
            android:textStyle="bold"
            android:layout_margin="30dp"
            android:gravity="center"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/weightlogo" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/main_weight_textbox"
            android:textSize="@dimen/main_text_size"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_margin="30dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/widget.IMC.TextInputLayer.Weight"
            app:suffixTextColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            app:boxBackgroundColor="@color/textInputBackgroundColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_hint_weight">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/main_poids_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_text_size"
                android:textAlignment="center"
                android:maxLines="1"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/main_height_textbox"
            android:textSize="@dimen/main_text_size"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_margin="30dp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/widget.IMC.TextInputLayer.Height"
            app:suffixTextColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            app:boxBackgroundColor="@color/textInputBackgroundColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_hint_height">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/main_taille_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/main_text_size"
                android:maxLines="1"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                style="@style/widget.IMC.TextInputLayer.Button"
                android:id="@+id/main_validate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_layout_margin"
                android:layout_marginTop="@dimen/main_layout_margin"
                android:layout_marginEnd="@dimen/main_layout_margin"
                android:layout_marginBottom="@dimen/main_layout_margin"
                android:layout_toStartOf="@id/main_cancel_button"
                android:onClick="calculerResultat"
                android:text="@string/main_validate_button"
                android:textSize="@dimen/main_text_button" />

            <Button
                style="@style/widget.IMC.TextInputLayer.Button.Outlined"
                android:id="@+id/main_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/main_cancel_button"
                android:layout_margin="@dimen/main_layout_margin"
                android:textSize="@dimen/main_text_button"
                />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>